# corrosiondb

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs
ci/: install-protobuf.sh
proto/: coordinator.proto
src/: lib.rs
src/io/: coordinator.rs  coordinator_grpc.rs  mod.rs
